# roulette-simulation

./: CMakeLists.txt  Makefile  clean.sh  create.sh
src/: Board.cpp  Board.h  roulette-simulation.cpp
